@@ -30,7 +30,7 @@ test_that("solubility() produces stable conditions (affinity = 0)", {
   basis(c("calcite", "Ca+2", "H2O", "O2", "H+"))
   species(c("CO2", "HCO3-", "CO3-2"))
   a <- affinity(pH = c(pH, res), T = T, IS = IS)
-  s <- solubility(a)
+  s <- solubility(a, dissociate = TRUE)
   # here we need to also set the activity of Ca+2
   checkfun <- function(i) {
     logact <- sapply(s$loga.equil, "[", i)
@@ -41,16 +41,6 @@ test_that("solubility() produces stable conditions (affinity = 0)", {
   }
   expect_equal(max(abs(unlist(checkfun(33)$values))), 0)
   expect_equal(max(abs(unlist(checkfun(99)$values))), 0)
-})
-
-test_that("solubility() catches some error conditions", {
-  # demo(solubility) has basis(c("calcite", "Ca+2", "H2O", "O2", "H+")), but what if the user puts H2O second?
-  basis(c("calcite", "H2O", "Ca+2", "O2", "H+"))
-  species(c("CO2", "HCO3-", "CO3-2"))
-  a <- affinity()
-  expect_message(solubility(a), "test for dissociation reaction returns FALSE")
-  # TODO: write a test to get this error 20190730
-  #expect_error(solubility(a), "Unsure whether the first formation reaction is a dissociation reaction.")
 })
 
 test_that("backward compatible and new calling styles produce identical results", {
